--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^9.2.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
