--- a/.gitignore
+++ b/.gitignore
@@ -4796,3 +4796,16 @@ public/out/warp_sms_sender/implement_SMS_sender.js
 public/out/wrap_email_sender/implement_email_sender.js
 .env
 .gitignore
+node_modules/dotenv/CHANGELOG.md
+node_modules/dotenv/config.d.ts
+node_modules/dotenv/config.js
+node_modules/dotenv/LICENSE
+node_modules/dotenv/package.json
+node_modules/dotenv/README-es.md
+node_modules/dotenv/README.md
+node_modules/dotenv/SECURITY.md
+node_modules/dotenv/lib/cli-options.js
+node_modules/dotenv/lib/env-options.js
+node_modules/dotenv/lib/main.d.ts
+node_modules/dotenv/lib/main.js
+.vscode/launch.json
